# Nebula

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.bat  build.sh  install-dependencies.sh  linux_build.sh  run.sh  windows_build.bat
.cache/clangd/index/: EBO.c.62A34A3D221A779B.idx  EBO.h.28001809140A0759.idx  VAO.c.1C56F765C5AA8D71.idx  VAO.h.7A1AF574FA8CC7A6.idx  VBO.c.58EEE2046D48B681.idx  VBO.h.DA887E0A3AFE4671.idx  context.c.BEB1E65817C1D1EB.idx  egl_context.c.324ABC714F65515E.idx  glad.c.14CF2AE565AF8B51.idx  glad.h.EF532629D6F1CB8D.idx  glfw3.h.060C5711D2F0DEC9.idx  glfw3native.h.93CAD428D71231C0.idx  glx_context.c.B968E58058F7BDB5.idx  init.c.F1653132733BDC40.idx  input.c.2DB6511EE5F502ED.idx  internal.h.A183D6846B494B61.idx  khrplatform.h.35EC589D89AA865C.idx  linux_joystick.c.74768635A6172A18.idx  linux_joystick.h.817CD9E43FD38C59.idx  main.c.0630E1853C523391.idx  mappings.h.8A5835AF6A18340D.idx  monitor.c.36FB4166086369F6.idx  null_init.c.C87C9F5011E46757.idx  null_joystick.c.8654BB9FAB686D39.idx  null_joystick.h.E39171C8DA2AB529.idx  null_monitor.c.DE1247262ED0FB63.idx  null_platform.h.AC8A9299FA1E51D7.idx  null_window.c.D9270E76FE3159E1.idx  osmesa_context.c.44DA675F980EF413.idx  platform.c.B7E9F51F7EDC1531.idx  platform.h.028A165DF548C02F.idx  posix_module.c.A98C4FF7113FE6F6.idx  posix_poll.c.64086B4AEED6D92A.idx  posix_poll.h.87172159AC1F8D51.idx  posix_thread.c.A21AD100267D7610.idx  posix_thread.h.63F05E8329A88C15.idx  posix_time.c.53CDE4D166C86A59.idx  posix_time.h.59857AFE32A51B74.idx  shader.c.6FE081385AA33CCC.idx  shader.h.3DE7B78376A7E9D2.idx  (+16 more)
docs/: TODO.md
glad/include/glad/: glad.h
include/: EBO.h  VAO.h  VBO.h  camera.h  mesh.h  shader.h  texture.h  window.h
shaders/: default.frag  default.vert
src/: EBO.c  VAO.c  VBO.c  camera.c  main.c  mesh.c  shader.c  texture.c
src/core/: core.h  defines.h  global.c  global.h  types.h
src/graphics/: EBO.c  EBO.h  VAO.c  VAO.h  VBO.c  VBO.h  camera.c  mesh.c  mesh.h  shader.c  shader.h  texture.c  texture.h
src/logger/: logger.c  logger.h
src/vk_backend/: vk_core.c  vk_core.h  vk_debug.c  vk_debug.h  vk_device.c  vk_device.h  vk_instance.c  vk_instance.h
src/window/: window.c  window.h
